@@ -39,6 +39,8 @@ Valerio Pilo
 	* jack_client_has_session_callback implementation.
 	* Fix jdelay for new latency API.
 	* Check requested buffer size and limit to 1..8192 - avoids wierd behaviour caused by jack_bufsize foobar.
+	* jack_port_type_get_buffer_size implementation.
+	* Stop using alloca and allocate buffer on the heap for alsa_io.
 
 2011-03-08 Stephane Letz  <letz@grame.fr>
 
